nginx1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx1
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: red-creditizens
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: red-creditizens
        configMap:
          name: red-html-configmap
