nginx3.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx3
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx3

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx3
  template:
    metadata:
      labels:
        app: nginx3
    spec:
      containers:
      - name: nginx3
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: green-creditizens
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: green-creditizens
        configMap:
          name: green-html-configmap
