nginx-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /nginx1
    backendRefs:
    - name: nginx1
      kind: Service
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /nginx2
    backendRefs:
    - name: nginx2
      kind: Service
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /nginx3
    backendRefs:
    - name: nginx3
      kind: Service
      port: 80
